# argos

./: .gitignore  LICENSE  README.md  stack-tech-altaares.md
docs/: ekf_flow_fusion.md  journal.md
guidance/: .gitignore  CMakeLists.txt
guidance/src/: control_law.hpp  main.cpp  plane.cpp  yaw_track.cpp
guidance/tests/: test_control_law.cpp
perception/: .gitignore  Makefile  argos_visdrone.yaml  benchmark.md  benchmark.py  console.py  export.py  get_video.py  gz_camera.py  infer.py  prepare_data.py  requirements.txt  train.py
sitl/: gazebo_takeoff_test.py  mission_basic.py  run_gazebo.sh  run_sitl.sh  yaw_demo.py
sitl/gazebo/worlds/: argos_demo.sdf
tools/: log_quicklook.py
